error code refactor
