# controllers/user_controllers.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"inventory/database"
 	"inventory/model"
+	"inventory/utils"
 	"log"
 	"net/http"
 	"strings"
@@ -17,16 +18,13 @@ import (
 // @Accept       json
 // @Produce      json
 // @Success      200  {object}  []model.User
-// @Failure      400  {object}  httputil.HTTPError
-// @Failure      404  {object}  httputil.HTTPError
-// @Failure      500  {object}  httputil.HTTPError
+// @Failure      400  {object}  utils.HTTPError
+// @Failure      404  {object}  utils.HTTPError
+// @Failure      500  {object}  utils.HTTPError
 // @Router       /v1/getAllUser  [get]
 func GetAllUser(c *gin.Context) {
 
 	user := []model.User{}
-
-	// result := database.DB.Table("users").Find(&user)
-	// fmt.Println(result.Statement.RowsAffected)
 	if err := database.DB.Find(&user).Error; err != nil {
 		log.Printf("Error retrieving users: %v", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal Server Error"})
@@ -34,7 +32,7 @@ func GetAllUser(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{"users": user})
-
+	c.Abort()
 }
 
 // createUser godoc
@@ -51,37 +49,54 @@ func GetAllUser(c *gin.Context) {
 // @Failure      500  {object} object
 // @Router       /v1/createUser  [post]
 func CreateCustomer(c *gin.Context) {
-
-	username := c.Query("username")
-	role := c.Query("role")
-	user := &model.User{
-		Username: username,
-		Role:     role,
+	user := &model.User{}
+	if err := c.ShouldBindJSON(&user); err != nil {
+		c.JSON(http.StatusBadRequest, &utils.HTTPError{Code: http.StatusBadRequest,
+			Message: "Username, Role is required"})
+		return
 	}
 
-	errors := make(map[string]string)
-
-	if username == "" {
-		errors["username"] = "Username is required"
-	}
-	if role == "" {
-		errors["role"] = "Role is required"
-	}
+	errors := validateUser(*user)
 
 	if len(errors) > 0 {
-		c.JSON(http.StatusBadRequest, gin.H{"errors": errors})
+		c.JSON(http.StatusBadRequest, &utils.HTTPError{Code: http.StatusBadRequest, Message: errors})
 		return
 	}
 	res := database.DB.Create(&user)
-	if res.Error == nil {
-		c.JSON(http.StatusOK, gin.H{"user": user})
-	} else {
-		if strings.Contains(res.Error.Error(), "Duplicate entry") {
-			c.JSON(http.StatusConflict, gin.H{"error": "Username already exists"})
-		} else {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal Server Error",	"msg":res.Error.Error()})
-		}
+
+	if res.RowsAffected == 0 {
+		c.JSON(http.StatusBadRequest, &utils.HTTPError{Code: http.StatusBadRequest, Message: "Username already exists"})
 		return
+
+	} else if res.Error == nil {
+		c.JSON(http.StatusOK, gin.H{"user": user})
+		return
+	} else {
+
+		if strings.Contains(res.Error.Error(), "Duplicate entry") {
+			c.JSON(http.StatusConflict, &utils.HTTPError{Code: http.StatusBadRequest, Message: "Username already exists"})
+			return
+
+		} else {
+			c.JSON(http.StatusInternalServerError,
+				&utils.HTTPError{Code: http.StatusInternalServerError, Message: res.Error.Error()})
+			return
+
+		}
+		c.Abort()
 	}
 }
 
+func validateUser(user model.User) []string {
+	var errors []string
+
+	if user.Username == "" {
+		errors = append(errors, "Username is required")
+	}
+
+	if user.Role == "" {
+		errors = append(errors, "Role is required")
+	}
+
+	return errors
+}
