# utils/httperror.go
@@ -1,18 +1,7 @@
-package httputil
-
-import "github.com/gin-gonic/gin"
-
-// NewError example
-func NewError(ctx *gin.Context, status int, err error) {
-	er := HTTPError{
-		Code:    status,
-		Message: err.Error(),
-	}
-	ctx.JSON(status, er)
-}
+package utils
 
 // HTTPError example
 type HTTPError struct {
-	Code    int    `json:"code" example:"400"`
-	Message string `json:"message" example:"status bad request"`
+	Code    int `json:"code" example:"400"`
+	Message any `json:"message" example:"status bad request"`
 }
